--- a/app/views/editorial/_edizione_smtp.html.erb
+++ b/app/views/editorial/_edizione_smtp.html.erb
@@ -113,6 +113,7 @@ table td {padding: 0; margin: 0; border: none;}
 <%# inizio loop sezione indice %>
 <% last_tops=0
    ancora = "" %>
+<%# @art.sort_by(&:ordinamento).each do |nart| %>
 <% @art.each do |nart| %>
  <%# ancora = h(truncate(nart.subject, :length => 30).to_slug) %>
  <% ancora = nart.id.to_s %>
