--- a/app/views/attachments/_art_links.erb
+++ b/app/views/attachments/_art_links.erb
@@ -1,8 +1,7 @@
 <div class="fs-art-attachments">
   <h2>Allegati</h2>
   <% for attachment in attachments %>
-      <p><%= link_to_attachment attachment , :text => attachment.filename + ( attachment.description.nil? ? "" : " - #{attachment.description}")    ,:deletable => false , :class => 'icon-attachment' %>
-           <%#  h(" - #{attachment.description}") unless attachment.description.blank? %>
+      <p><%= link_to_fs_attachment attachment , :text => attachment.filename + ( attachment.description.nil? ? "" : " - #{attachment.description}")    ,:deletable => false , :class => 'icon-attachment' %>
         <span class="size">(<%= number_to_human_size attachment.filesize %>)</span>
         <% if options[:author] %>
             <span class="author"><%= h(attachment.author) %>, <%= format_time(attachment.created_on) %></span>
