--- a/app/views/editorial/_articolo_full.html.erb
+++ b/app/views/editorial/_articolo_full.html.erb
@@ -59,7 +59,6 @@
             </div>
           </div>
         </div>
-
       </div>
     </div>
     <div class="clearfix">&nbsp; <br/></div>
@@ -71,9 +70,7 @@
       </div>
     </div>
     <div class="fs-attachments">
-      <%# textilizable @notes, :attachments => @attachements, :object => @issue %>
-      <%#	parse_inline_attachments(text, project, obj, attr, only_path, options)  %>
-      <%= link_to_art_attachments(articolo, :author => false) %>
+      <%= link_to_fs_attachments(articolo, :author => false ) %>
     </div>
     <div class="fs-articolo-full-bottom">
 
@@ -85,11 +82,6 @@
         <%= render :partial => 'quesito', :locals => {:q => @quesito} %>
     <% end %>
 
-    <!--
-    <div class="fs-comments">
-      <span class="fs-postcommentsicon"> Scrivi un commento </span>::<span class="fs-postcommentsicon"> Leggi i commenti </span>
-    </div>
-    -->
 <% else %>
     <br/>
     <p class="nodata"><%= l(:label_no_data) %></p>
