--- a/app/views/services/condition.html.erb
+++ b/app/views/services/condition.html.erb
@@ -2,7 +2,7 @@
 <html dir="ltr" lang="en-EN">
 <head><!-- Created by DomThu & SPecchiaSoft -->
   <meta charset="utf-8"/>
-  <title>FiscoSport condizioni di utiliso</title>
+  <title>FiscoSport condizioni di utilizzo</title>
   <style>
     .toggler { width: 90%; height: 200px; position: relative; }
     #btnCond { padding: .5em 1em; text-decoration: none; }
