--- a/app/views/services/privacy.html.erb
+++ b/app/views/services/privacy.html.erb
@@ -35,7 +35,7 @@
           <a href="#" id="btnPriv" class="ui-state-default ui-corner-all">Non vedo bene</a>
         </td>
         <td style="text-align: right;">
-          E-mail: <a class="pri" title="Manda una e-mail" href="mailto:info@commercioetico.it"><b>info@commercioetico.it</b></a><br />
+          E-mail: <a class="pri" title="Manda una e-mail" href="mailto:info@fiscosport.it"><b>info@fiscosport.it</b></a><br />
         </td>
       </tr>
       <tr>
