--- a/app/views/editorial/_footer.html.erb
+++ b/app/views/editorial/_footer.html.erb
@@ -1,4 +1,101 @@
+<script type="text/javascript">
+    var pageSize = 10;
+    $(document).ready(function () {
+        var url_inf = '<%= privacy_path %>';
+        //privacy
+        $("#ainformativa").click(function (e) {
+            Inform(e);
+            return false
+        });
+        $('#informativa').dialog({
+            autoOpen:false,
+            width:700,
+            show:"blind",
+            hide:"explode",
+            height:550,
+            resizable:true,
+            draggable:true,
+            title:'Informativa',
+            bgiframe:true,
+            modal:true,
+            open:function (event, ui) {
+                $(this).load(url_inf);
+            },
+            buttons:{
+                "Acconsento":function () {
+                    $('#user_se_privacy').prop('checked', true);
+                    $(this).dialog("close");
+                },
+                "Chiudi":function () {
+                    $(this).dialog("close");
+                }
+            }
+        });
+        //Condition
+        $("#acondizioni").click(function (e) {
+            Leggi(e);
+            return false
+        });
+        $('#condizioni').dialog({
+            autoOpen:false,
+            width:700,
+            height:550,
+            resizable:true,
+            draggable:true,
+            title:'Condizioni di utilizzo',
+            bgiframe:true,
+            modal:true,
+            open:function (event, ui) {
+                $(this).load(url_cond);
+                $('.ui-widget-overlay').bind('click', function () {
+                    $('#condizioni').dialog('close');
+                })
+            },
+            buttons:{
+                "Ho letto":function (ev, ui) {
+                    $('#user_se_condition').prop('checked', true);
+                    $(this).dialog("close");
+                },
+                "Chiudi":function () {
+                    $(this).dialog("close");
+                }
+            }
+        });
+
+    }); //end hquery document ready
+    var url_cond = '<%= condition_path %>';
+    function Leggi(e) {
+        $("#condizioni").html("Recupero dati in corso attendere prego ...")
+        $("#condizioni").dialog('open');
+        return false;
+    }
+    var url_inf = '<%= privacy_path %>';
+    function Inform(e) {
+        $("#informativa").html("Recupero dati in corso attendere prego ...")
+        $("#informativa").dialog("open");
+        return false;
+    }
+
+</script><!--
+<div class="fs-abbo-bottom">
+  <div class="fs-abbo-sx1">
+    <p><a href='#' id='acondizioni' class='pri'><b>Condizioni di utilizzo</b></a></p>
+
+    <div id="condizioni" title="Condizioni di utilizzo" class="hidden" style="overflow: hidden;"></div>
+  </div>
+  <div class="fs-abbo-dx1">
+
+
+    <p> <a href='#' id='ainformativa' class='pri'><b>Trattamento dei dati</b></a></p>
+  </div>
+  <div id="informativa" title="Informativa" class="hidden" style="overflow: hidden;">
+  </div>
+</div>
+ -->
 <footer class="fs-footer clearfix">
-    <p><a href="#">Privacy</a> | <a href="#">About</a> | <a href="#">WebDesign</a></p>
-    <p>Copyright © 2012. All Rights Reserved.</p>
+
+  <div id="condizioni" title="Condizioni di utilizzo" class="hidden" style="overflow: hidden;"></div>
+  <div id="informativa" title="Informativa" class="hidden" style="overflow: hidden;"> </div>
+    <p><a href='#' id='acondizioni' class='pri'><b>Condizioni di utilizzo</b></a> | <a href='#' id='ainformativa' class='pri'><b>Trattamento dei dati</b></a> | <a href="#">WebDesign</a></p>
+    <p>Copyright © 2013. All Rights Reserved.</p>
 </footer>
