--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -1,5 +1,5 @@
 <h2><%= l(:label_administration) %></h2>
-<div id="admin-index" style="width: 75%; margin: 0 auto;">
+<div id="admin-index" style="width: 75%;">
   <div>
     <%= render :partial => "my/blocks/cal" %>
     <%= render :partial => "my/blocks/news", :locals => {:user => @user} %>
