box-next-event in home + corrections

--- a/app/views/editorial/_blocco_sidebar1.html.erb
+++ b/app/views/editorial/_blocco_sidebar1.html.erb
@@ -4,7 +4,7 @@
   <% unless @topsection.nil? && @top_menu.nil? %>
       <%= render :partial => 'editorial/blocco_quick_search' %>
   <% end %>
-  <% unless request.url.match('/event').nil? %>
+  <% unless request.url.match('/event').nil? || request.url.match('/editoriale/home').nil? %>
       <%= render :partial => 'editorial/blocco_eventi_contact_me' %>
       <% unless @conv_prossimo.nil? %>
           <%= render :partial => 'editorial/blocco_eventi' %>
