little restyling FE & fix box 4 events

--- a/app/views/editorial/_blocco_eventi_contact_me.html.erb
+++ b/app/views/editorial/_blocco_eventi_contact_me.html.erb
@@ -30,8 +30,9 @@
         );
     }
 </script>
+<!--
 <div class="fs-bar fs-blockheader">
-</div>
+</div> -->
 <div id="accordion-events-contact">
   <div id="fs-events-contact"></div>
   <span>
