--- a/app/views/editorial/_blocco_eventi.html.erb
+++ b/app/views/editorial/_blocco_eventi.html.erb
@@ -1,12 +1,14 @@
-<div class="fs-block clearfix">
+<div class="clearfix">
   <div class="fs-blockheader">
     <h3 class="t">Convegni ed Eventi</h3>
   </div>
-  <div class="fs-blockcontent">
+
+  <div class="fs-blockcontent" style="margin-top: 5px;">
     <% if @conv_prossimo.nil? %>
         <div> Nessun evento o convegno previsto.
         </div>
     <% else %>
+
         <article class="fs-article">
           <div class="fs-convegni-border">
             <div class="fs-convegni-block-data"><span>
@@ -24,7 +26,6 @@
               <%= link_to "Visualizza... ", url_for(:controller => 'editorial', :action => "evento", :id => @conv_prossimo.id.to_s, :slug => h(truncate(@conv_prossimo.subject, :length => 125).to_slug), :escape => false), :class => "fs-vuoto-inline-button" %>
               <br/>&nbsp;<br/>
             </div>
-
           </div>
         </article>
     <% end %>
