--- a/public/stylesheets/jquery-ui-rewrite.css
+++ b/public/stylesheets/jquery-ui-rewrite.css
@@ -25,7 +25,7 @@
 }
 
 #accordion-events-contact .ui-accordion-icons {
-    padding: 0;
+    padding: 0 !important;
 
 }
 
@@ -86,30 +86,27 @@
 }
 
 /* inizio bootone inattivo */
+
 .ui-state-default, .ui-widget-content .ui-state-default, .ui-widget-header .ui-state-default {
+
     border: 0;
-    border-collapse: separate;
-    -webkit-background-origin: border !important;
-    -moz-background-origin: border !important;
-    background-origin: border-box !important;
-    background: #006B92;
-    background: linear-gradient(top, #007BA8 0, #007BA8 50%, #0078A3 60%, #005675 100%) no-repeat;
-    background: -webkit-linear-gradient(top, #007BA8 0, #007BA8 50%, #0078A3 60%, #005675 100%) no-repeat;
-    background: -moz-linear-gradient(top, #007BA8 0, #007BA8 50%, #0078A3 60%, #005675 100%) no-repeat;
-    background: -o-linear-gradient(top, #007BA8 0, #007BA8 50%, #0078A3 60%, #005675 100%) no-repeat;
-    background: -ms-linear-gradient(top, #007BA8 0, #007BA8 50%, #0078A3 60%, #005675 100%) no-repeat;
-    background: linear-gradient(top, #007BA8 0, #007BA8 50%, #0078A3 60%, #005675 100%) no-repeat;
-    -svg-background: linear-gradient(top, #007BA8 0, #007BA8 50%, #0078A3 60%, #005675 100%) no-repeat;
+    text-decoration: none;
+    text-align: center;
     -webkit-border-radius: 4px;
     -moz-border-radius: 4px;
     border-radius: 4px;
-    -webkit-box-shadow: 0 0 3px 2px rgba(0, 0, 0, 0.2);
-    -moz-box-shadow: 0 0 3px 2px rgba(0, 0, 0, 0.2);
-    box-shadow: 0 0 3px 2px rgba(0, 0, 0, 0.2);
-    padding: 0 35px;
+    font: 1.2em Arial, Helvetica, sans-serif;
+    color: #E5FFFF;
+    background-color: #00698f;
+    background-image: -moz-linear-gradient(top, #00698f 0%, #005472 100%);
+    background-image: -webkit-linear-gradient(top, #00698f 0%, #005472 100%);
+    background-image: -o-linear-gradient(top, #00698f 0%, #005472 100%);
+    background-image: -ms-linear-gradient(top, #00698f 0%, #005472 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr = '#005472', endColorstr = '#005472', GradientType = 0);
+    background-image: linear-gradient(top, #00698f 0%, #005472 100%);
+    text-shadow: 0px 1px 1px #323232;
+    padding: 9px 32px !important;
     margin: 0 auto;
-
-    color: #FFFFFF;
 
 }
 
@@ -120,24 +117,31 @@
 
 /* fine bootone inattivo */
 /* inizio non selezionato hover*/
+
 .ui-state-hover, .ui-widget-content .ui-state-hover, .ui-widget-header .ui-state-hover, .ui-state-focus, .ui-widget-content .ui-state-focus, .ui-widget-header .ui-state-focus {
-    background: #007FAD;
-    background: linear-gradient(top, #008EC2 0, #008EC2 50%, #008EC2 60%, #006C94 100%) no-repeat;
-    background: -webkit-linear-gradient(top, #008EC2 0, #008EC2 50%, #008EC2 60%, #006C94 100%) no-repeat;
-    background: -moz-linear-gradient(top, #008EC2 0, #008EC2 50%, #008EC2 60%, #006C94 100%) no-repeat;
-    background: -o-linear-gradient(top, #008EC2 0, #008EC2 50%, #008EC2 60%, #006C94 100%) no-repeat;
-    background: -ms-linear-gradient(top, #008EC2 0, #008EC2 50%, #008EC2 60%, #006C94 100%) no-repeat;
-    background: linear-gradient(top, #008EC2 0, #008EC2 50%, #008EC2 60%, #006C94 100%) no-repeat;
-    -svg-background: linear-gradient(top, #008EC2 0, #008EC2 50%, #008EC2 60%, #006C94 100%) no-repeat;
+    border: 0;
+    text-decoration: none;
+    text-align: center;
     -webkit-border-radius: 4px;
     -moz-border-radius: 4px;
     border-radius: 4px;
-    -webkit-box-shadow: 0 0 3px 2px rgba(0, 0, 0, 0.2);
-    -moz-box-shadow: 0 0 3px 2px rgba(0, 0, 0, 0.2);
-    box-shadow: 0 0 3px 2px rgba(0, 0, 0, 0.2);
-    padding: 0 35px;
+    font: 1.2em Arial, Helvetica, sans-serif;
+    color: #E5FFFF;
+    background-color: #00698f;
+    background-color: #00698f;
+    background-image: -moz-linear-gradient(top, #00698f 0%, #005472 100%);
+    background-image: -webkit-linear-gradient(top, #00698f 0%, #005472 100%);
+    background-image: -o-linear-gradient(top, #00698f 0%, #005472 100%);
+    background-image: -ms-linear-gradient(top, #00698f 0%, #005472 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr = '#005472', endColorstr = '#005472', GradientType = 0);
+    background-image: linear-gradient(top, #00698f 0%, #005472 100%);
+    -webkit-box-shadow: 0px 0px 2px #bababa, inset 0px 0px 1px #ffffff;
+    -moz-box-shadow: 0px 0px 2px #bababa, inset 0px 0px 1px #ffffff;
+    box-shadow: 0px 0px 2px #bababa, inset 0px 0px 1px #ffffff;
+    padding: 9px 32px !important;
     margin: 0 auto;
-    color: #ffffff
+    text-shadow: 0px 1px 1px #5a88bf;
+
 }
 
 .ui-state-hover a, .ui-state-hover a:hover, .ui-state-hover a:link, .ui-state-hover a:visited {
@@ -148,23 +152,32 @@
 /* fine non selezionato hover*/
 /* inizio attivo hover*/
 .ui-state-active, .ui-widget-content .ui-state-active, .ui-widget-header .ui-state-active {
-    background: #FFBE1A;
-    background: linear-gradient(top, #FFC42E 0, #FFC42E 50%, #FFC229 60%, #FFB700 100%) no-repeat;
-    background: -webkit-linear-gradient(top, #FFC42E 0, #FFC42E 50%, #FFC229 60%, #FFB700 100%) no-repeat;
-    background: -moz-linear-gradient(top, #FFC42E 0, #FFC42E 50%, #FFC229 60%, #FFB700 100%) no-repeat;
-    background: -o-linear-gradient(top, #FFC42E 0, #FFC42E 50%, #FFC229 60%, #FFB700 100%) no-repeat;
-    background: -ms-linear-gradient(top, #FFC42E 0, #FFC42E 50%, #FFC229 60%, #FFB700 100%) no-repeat;
-    background: linear-gradient(top, #FFC42E 0, #FFC42E 50%, #FFC229 60%, #FFB700 100%) no-repeat;
-    -svg-background: linear-gradient(top, #FFC42E 0, #FFC42E 50%, #FFC229 60%, #FFB700 100%) no-repeat;
+    border: 0;
+    text-decoration: none;
+    text-align: center;
     -webkit-border-radius: 4px;
     -moz-border-radius: 4px;
     border-radius: 4px;
-    -webkit-box-shadow: 0 0 3px 2px rgba(0, 0, 0, 0.2);
-    -moz-box-shadow: 0 0 3px 2px rgba(0, 0, 0, 0.2);
-    box-shadow: 0 0 3px 2px rgba(0, 0, 0, 0.2);
-    padding: 0 35px;
+    font: 1.2em Arial, Helvetica, sans-serif;
+    color: #323232;
+    background-color: #ffcc4b;
+    background-image: -moz-linear-gradient(top, #ffcc4b 0%, #edab03 100%);
+    background-image: -webkit-linear-gradient(top, #ffcc4b 0%, #edab03 100%);
+    background-image: -o-linear-gradient(top, #ffcc4b 0%, #edab03 100%);
+    background-image: -ms-linear-gradient(top, #ffcc4b 0%, #edab03 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr = '#edab03', endColorstr = '#edab03', GradientType = 0);
+    background-image: linear-gradient(top, #ffcc4b 0%, #edab03 100%);
+    -webkit-box-shadow: 0px 0px 2px #bababa, inset 0px 0px 1px #5878b0;
+    -moz-box-shadow: 0px 0px 2px #bababa, inset 0px 0px 1px #5878b0;
+    box-shadow: 0px 0px 2px #bababa, inset 0px 0px 1px #5878b0;
+    padding: 9px 32px !important;
+    text-shadow: 0px 1px 1px #c5c5c5;
     margin: 0 auto;
-    color: #Df0000
+}
+
+.ui-state-active:hover, .ui-widget-content .ui-state-active:hover, .ui-widget-header .ui-state-active:hover {
+
+    text-shadow: 0 1px 1px #e8e8e8;
 }
 
 .ui-state-active a, .ui-state-active a:link, .ui-state-active a:visited {
@@ -267,4 +280,8 @@ h6.accordion-basic {
 .ui-widget {
     font-family: Arial, Helvetica, Sans-Serif;
     font-size: 1em !important;
+}
+
+.ui-button-text-only .ui-button-text {
+    padding: 0 !important;
 }
