--- a/app/views/services/privacy.html.erb
+++ b/app/views/services/privacy.html.erb
@@ -5,10 +5,9 @@
   <title>FiscoSport privacy</title>
   <style>
     .toggler { width: 90%; height: 200px; position: relative; }
-    #btnPriv { padding: .5em 1em; text-decoration: none; }
-    #effect { position: relative; }
+     #effect { position: relative; }
     .newClass { width: 50%;  padding: 1em; letter-spacing: 0; font-size: 1.0em; margin: 0; }
-    .anotherNewClass { text-indent: 40px; letter-spacing: .4em; width: 100%; height: 350px; padding: 30px; margin: 10px; font-size: 1.6em; overflow: scroll; }
+    .anotherNewClass { text-indent: 40px; letter-spacing: 0.4em; width: 100%; height: 350px; padding: 30px; margin: 10px; font-size: 1.4em; overflow: scroll; }
     </style>
     <script>
     $(document).ready(function() {
@@ -44,8 +43,7 @@
             <div id="effect" class="newClass ui-corner-all">
 
               <%= Setting.template_privacy %>
-              -----------
-            </div>
+               </div>
           </div>
         </td>
       </tr>
